--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,8 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9b7070">  <td>21/01/03 00:09:11</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup()[pri:0, instance:com.emamiweb.testCases.MaterialCostTest@1877ab81]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@192794887</td>   <td></td> </tr>
-<tr bgcolor="c273d3">  <td>21/01/03 00:09:15</td>   <td>3979</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MaterialCostTest.MCP()[pri:0, instance:com.emamiweb.testCases.MaterialCostTest@1877ab81]">MCP</td> 
-  <td>main@192794887</td>   <td></td> </tr>
+<tr bgcolor="7fba77">  <td>21/01/14 21:04:22</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup()[pri:0, instance:com.emamiweb.testCases.MaterialCostTest@7a1ebcd8]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1053631449</td>   <td></td> </tr>
+<tr bgcolor="998b7c">  <td>21/01/14 21:04:28</td>   <td>6035</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MaterialCostTest.MCP(java.lang.String)[pri:0, instance:com.emamiweb.testCases.MaterialCostTest@7a1ebcd8]">MCP</td> 
+  <td>main@1053631449</td>   <td></td> </tr>
 </table>
